--- a/index.html
+++ b/index.html
@@ -26,29 +26,31 @@
             </div>
         </div>
     </div>
+    <div class="nav-container">
     <nav>
         <div class="logo">
             Kiddo
         </div>
         <div class="nav-left">
-            <input type="search" name="search" id="" placeholder="Search products, brands and categories">
+            <input type="search" name="search" class="search" id="" placeholder="Search products, brands and categories">
             <button>Search</button>
-            <div>
-                <i class="fa-regular fa-user"></i>
-                <span>Account</span>
+            <div class="sub-nav">
+                <i class="fa-regular fa-user"></i>&nbsp
+                <span>Account</span>&nbsp
                 <i class="fa-solid fa-angle-down"></i>
             </div>
-            <div>
-                <i class="fa-solid fa-question"></i>
-                <span>Help</span>
+            <div class="sub-nav">
+                <i class="fa-solid fa-question"></i>&nbsp
+                <span>Help</span>&nbsp
                 <i class="fa-solid fa-angle-down"></i>
             </div>
-            <div>
-                <i class="fa-solid fa-cart-shopping"></i>
+            <div class="sub-nav">
+                <i class="fa-solid fa-cart-shopping"></i>&nbsp
                 <span>Cart</span>
             </div>
         </div>
     </nav>
+</div>
     <div class="nav-bottom">
         <a href="">All Categories &nbsp<i class="fa-solid fa-bars"></i></a>
         <a href="">Fashion For Girls</a>
