--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <a href="">Baby Essentials</a>
         <a href="">Maternity</a>
         <a href="">School Store</a>
-        <a href="">Travel and saftey Gear</a>
-        <a href="">Diapering and Daily Care</a>
-        <a href="">Kids Beddings and Decor</a>
+        <a href="">Travel & saftey Gear</a>
+        <a href="">Diapering & Daily Care</a>
+        <a href="">Kids Beddings & Decor</a>
         <a href="">Toys</a>
     </div>
     <div class="dashboard">
