--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-top">
             <div class="left">
                 <ul>
-                    <li><a href="">Sell on Kiddos</a></li>
+                    <li><a href="Postad.html">Sell on Kiddos</a></li>
                     <li><a href="">Store Locator</a></li>
                 </ul>
             </div>
