--- a/Postad.html
+++ b/Postad.html
@@ -4,66 +4,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="postad.css">
+    <link rel="stylesheet" href="styles.css">
+
     <title>Document</title>
 </head>
 
 <body>
-    <div class="body_container">
-        <div class="form-heading">
-            <p class="null">null</p>
-            <p>Post Ad</p>
-            <p class="clear">Clear</p>
-        </div>
+    <div class="nav-container">
+        <nav>
+            <div class="logo">
+                Kiddo
+            </div>
+            <div class="nav-left">
+                <input type="search" name="search" class="search" id=""
+                    placeholder="Search products, brands and categories">
+                <button>Search</button>
+                <div class="sub-nav">
+                    <i class="fa-regular fa-user"></i>&nbsp
+                    <span>Account</span>&nbsp
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="sub-nav">
+                    <i class="fa-solid fa-question"></i>&nbsp
+                    <span>Help</span>&nbsp
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="sub-nav">
+                    <i class="fa-solid fa-cart-shopping"></i>&nbsp
+                    <span>Cart</span>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="body_wrapper">
+        <div class="body_container">
+            <div class="form-heading">
+                <p class="null">null</p>
+                <p>Post Ad</p>
+                <p class="clear">Clear</p>
+            </div>
 
-        <form action="" class="form_body">
-            <div class="form_wrapper">
+            <form action="" class="form_body">
+                <div class="form_wrapper">
 
-            <div class="">
-                
-                <select name="category" id="category" class="form-control" required>
-                    <option value="category" disabled selected>Category</option>
-                    <option value="Fashion For Girls">Fashion For Girls</option>
-                    <option value="Fashion For Boys">Fashion For Boys</option>
-                    <option value="Baby Essentials">Baby Essentials</option>
-                    <option value="Maternity">Maternity</option>
-                    <option value="School Store">School Store</option>
-                    <option value="Travel & saftey Gear">Travel & saftey Gear</option>
-                    <option value="Diapering & Daily Care">Diapering & Daily Care</option>
-                    <option value="Kids Beddings & Decor">Kids Beddings & Decor</option>
-                    <option value="Toys">Toys</option>
-                </select>
-            </div>
-            <div>
-            
-            <select name="location" id="location" class="form-control" required>
-                <option value="select location" disabled selected>Select Location</option>
-                <option value="Abuja">Abuja</option>
-                <option value="Port Harcourt">Port Harcourt</option>
-                <option value="Lagos">Lagos</option>
-                <option value="Owerri">Owerri</option>
-                <option value="Calabar">Calabar</option>
-                <option value="Enugu">Enugu</option>
-                <option value="Onitsha">Onitsha</option>
-                <option value="Ibadan">Ibadan</option>
-                <option value="Kaduna">Kaduna</option>
-            </select>
+                    <div class="">
+
+                        <select name="category" id="category" class="form-control" required>
+                            <option value="category" disabled selected>Category</option>
+                            <option value="Fashion For Girls">Fashion For Girls</option>
+                            <option value="Fashion For Boys">Fashion For Boys</option>
+                            <option value="Baby Essentials">Baby Essentials</option>
+                            <option value="Maternity">Maternity</option>
+                            <option value="School Store">School Store</option>
+                            <option value="Travel & saftey Gear">Travel & saftey Gear</option>
+                            <option value="Diapering & Daily Care">Diapering & Daily Care</option>
+                            <option value="Kids Beddings & Decor">Kids Beddings & Decor</option>
+                            <option value="Toys">Toys</option>
+                        </select>
+                    </div>
+                    <div>
+
+                        <select name="location" id="location" class="form-control" required>
+                            <option value="select location" disabled selected>Select Location</option>
+                            <option value="Abuja">Abuja</option>
+                            <option value="Port Harcourt">Port Harcourt</option>
+                            <option value="Lagos">Lagos</option>
+                            <option value="Owerri">Owerri</option>
+                            <option value="Calabar">Calabar</option>
+                            <option value="Enugu">Enugu</option>
+                            <option value="Onitsha">Onitsha</option>
+                            <option value="Ibadan">Ibadan</option>
+                            <option value="Kaduna">Kaduna</option>
+                        </select>
+                    </div>
+                    <div class="addphoto">
+                        <p>Add photo</p>
+                        <h6>Add at least 1 photo for this category</h6>
+                        <p>First picture - is the title picture. You can change the order of photos: just grab your
+                            photos and
+                            drag
+                        </p>
+                    </div>
+                    <div>
+                        <input type="file" name="" id="">
+                    </div>
+                    <p>Supported formats are .jpg, .gif and .png, 5MB max</p>
+                    <input type="url" name="url" id="url" class="form-control" placeholder="Link to Youtube video">
+                    <button class="form-control form_submit">Submit</button>
+                </div>
+            </form>
         </div>
-            <div class="addphoto">
-                <p>Add photo</p>
-                <h6>Add at least 1 photo for this category</h6>
-                <p>First picture - is the title picture. You can change the order of photos: just grab your photos and
-                    drag
-                </p>
-            </div>
-            <div>
-                <input type="file" name="" id="" >
-            </div>
-            <p>Supported formats are .jpg, .gif and .png, 5MB max</p>
-            <input type="url" name="url" id="url" class="form-control" placeholder="Link to Youtube video">
-            <button class="form-control form_submit" >Submit</button>
-        </div>
-        </form>
     </div>
     <script src="script.js"></script>
 </body>
