--- a/Postad.html
+++ b/Postad.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="nav-container">
+    <div class="nav-container borderline">
         <nav>
             <div class="logo">
                 Kiddo
