--- a/Postad.html
+++ b/Postad.html
@@ -81,16 +81,16 @@
                     </div>
                     <div class="addphoto">
                         <p>Add photo</p>
-                        <h6>Add at least 1 photo for this category</h6>
+                        <h5>Add at least 1 photo for this category</h5>
                         <p>First picture - is the title picture. You can change the order of photos: just grab your
                             photos and
                             drag
                         </p>
                     </div>
                     <div>
-                        <input type="file" name="" id="">
+                        <input type="file" class="file" id="">
                     </div>
-                    <p>Supported formats are .jpg, .gif and .png, 5MB max</p>
+                    <p class="formats">Supported formats are .jpg, .gif and .png, 5MB max</p>
                     <input type="url" name="url" id="url" class="form-control" placeholder="Link to Youtube video">
                     <button class="form-control form_submit">Submit</button>
                 </div>
