--- a/Postad.html
+++ b/Postad.html
@@ -38,6 +38,7 @@
             </div>
         </nav>
     </div>
+    <img src="img/m8po_w1u0_210819-removebg-preview.png" width="200px" height="200px" alt="">
     <div class="body_wrapper">
         <div class="body_container">
             <div class="form-heading">
