--- a/Postad.html
+++ b/Postad.html
@@ -38,8 +38,9 @@
             </div>
         </nav>
     </div>
-    <img src="img/m8po_w1u0_210819-removebg-preview.png" width="200px" height="200px" alt="">
+    
     <div class="body_wrapper">
+        <img class="img_cartoon" src="img/m8po_w1u0_210819-removebg-preview.png"  alt="">
         <div class="body_container">
             <div class="form-heading">
                 <p class="null">null</p>
@@ -97,7 +98,9 @@
                 </div>
             </form>
         </div>
+        <img class="img_cartoon2" src="img/m8po_w1u0_210819-removebg-preview.png"  alt="">
     </div>
+    
     <script src="script.js"></script>
 </body>
 
