--- a/Postad.html
+++ b/Postad.html
@@ -69,7 +69,7 @@
                     <div>
 
                         <select name="location" id="location" class="form-control" required>
-                            <option value="select location" disabled selected>Select Location</option>
+                            <option value="select location"  selected>Select Location</option>
                             <option value="Abuja">Abuja</option>
                             <option value="Port Harcourt">Port Harcourt</option>
                             <option value="Lagos">Lagos</option>
