--- a/Postad.html
+++ b/Postad.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="postad.css">
     <link rel="stylesheet" href="styles.css">
 
-    <title>Document</title>
+    <title>Post Ad</title>
 </head>
 
 <body>
