--- a/Postad.html
+++ b/Postad.html
@@ -43,7 +43,7 @@
         <img class="img_cartoon" src="img/m8po_w1u0_210819-removebg-preview.png"  alt="">
         <div class="body_container">
             <div class="form-heading">
-                <p class="null">null</p>
+                <p class="clear">Edit</p>
                 <p>Post Ad</p>
                 <p class="clear">Clear</p>
             </div>
