--- a/login.html
+++ b/login.html
@@ -20,8 +20,10 @@
                 <input type="text" name="" id="" class="form-control" placeholder="Enter Username"><br>
                 <input type="text" name="" id="" class="form-control" placeholder="Enter Password">
                 <div class="showPass">
-                    <input type="checkbox" name="" id="">
+                    <div class="left">
+                    <input type="checkbox" name="" id="">&nbsp;
                     <span>Show Password</span>
+                </div>
                     <span>Forgot Password?</span>
                 </div>
                 <button class="form-control login">Login</button>
