--- a/Postad.html
+++ b/Postad.html
@@ -23,7 +23,7 @@
                 <button>Search</button>
                 <div class="sub-nav">
                     <i class="fa-regular fa-user"></i>&nbsp
-                    <span>Account</span>&nbsp
+                    <a href="login.html">Account</a>&nbsp
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="sub-nav">
