--- a/login.html
+++ b/login.html
@@ -6,15 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LogIn</title>
     <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+
+    <div class="nav-container borderline">
+        <nav>
+            <div class="logo">
+                Kiddo
+            </div>
+            <div class="nav-left">
+                <input type="search" name="search" class="search" id="" placeholder="Search products, brands and categories">
+                <button>Search</button>
+                <div class="sub-nav">
+                    <i class="fa-regular fa-user"></i>&nbsp
+                    <a href="login.html">Account</a>&nbsp
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="sub-nav">
+                    <i class="fa-solid fa-question"></i>&nbsp
+                    <span>Help</span>&nbsp
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+                <div class="sub-nav">
+                    <i class="fa-solid fa-cart-shopping"></i>&nbsp
+                    <span>Cart</span>
+                </div>
+            </div>
+        </nav>
+    </div>
 
 <div class="body_wrapper">
     <div class="form_wrapper">
         <div class="form_container">
             <form action="">
+                
                 <div class="welcome">
+                    <i class="fa-regular fa-user"></i>
                     <p>Welcome to <span>Kiddo</span></p>
                 </div>
                 <input type="text" name="" id="" class="form-control" placeholder="Enter Username"><br>
