--- a/Postad.html
+++ b/Postad.html
@@ -48,7 +48,7 @@
                 <p class="clear">Clear</p>
             </div>
 
-            <form action="" class="form_body" id="form">
+            <form action="" class="form_body" id="form" enctype="multipart/form-data">
                 <div class="form_wrapper">
 
                     <div class="">
@@ -67,7 +67,7 @@
                         </select>
                     </div>
                     <input type="text" name="productname" id="productname" class="form-control" placeholder="Product Name">
-                    <input type="text" name="price" id="productprice" class="form-control" placeholder="Product Price">
+                    <input type="number" name="price" id="productprice" class="form-control" placeholder="Product Price">
                     <input type="text" name="vendorname" id="vendorname" class="form-control" placeholder="Vendor Name">
                     <div class="addphoto">
                         <p>Add photo</p>
@@ -86,6 +86,12 @@
             </form>
         </div>
         <img class="img_cartoon2" src="img/m8po_w1u0_210819-removebg-preview.png"  alt="">
+    </div>
+    <div class="dashboard">
+        <div id="card">
+
+        </div>
+
     </div>
     
     <script src="script.js"></script>
