--- a/index.html
+++ b/index.html
@@ -63,9 +63,15 @@
         <a href="">Kids Beddings & Decor</a>
         <a href="">Toys</a>
     </div>
-    <div class="dashboard">
+    <div class="dashboard_title">
         <h3>Amazing Deals Online</h3>
     </div>
+    <!-- <div class="dashboard">
+        <div id="card">
+
+        </div>
+
+    </div> -->
     <script src="script.js"></script>
 </body>
 
