--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,10 @@
     <title>Dashboard</title>
 </head>
 <body>
+    <div class="app_container">
+        <nav class="navbar"></nav>
+        <main class="app_content"></main>
+    </div> 
     <script src="script.js"></script>
 </body>
 </html>
