--- a/dashboard.html
+++ b/dashboard.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="dashboard.css">
     <title>Dashboard</title>
 </head>
 <body>
     <div class="app_container">
         <nav class="navbar"></nav>
-        <main class="app_content"></main>
+        <main class="app_content">
+
+        </main>
     </div> 
     <script src="script.js"></script>
 </body>
