--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="app_container">
-        <nav class="navbar"></nav>
+        <nav class="navbar">
+            <span><a href="">Kiddo</a></span>
+        </nav>
         <main class="app_content">
 
         </main>
