--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,21 @@
     <div class="app_container">
         <nav class="navbar">
             <span><a href="">Kiddo</a></span>
+            <ul>
+                <li>
+                    <a href="">Home</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">Orders</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">Products</a>
+                </li>
+            </ul>
         </nav>
         <main class="app_content">
 
