--- a/dashboard.html
+++ b/dashboard.html
@@ -25,6 +25,26 @@
                     <a href="">Products</a>
                 </li>
             </ul>
+            <ul>
+                <li>
+                    <a href="">Customer</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">Home</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">Home</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">Home</a>
+                </li>
+            </ul>
         </nav>
         <main class="app_content">
 
