edited new features

--- a/dashboard.html
+++ b/dashboard.html
@@ -32,17 +32,17 @@
             </ul>
             <ul>
                 <li>
-                    <a href="">Home</a>
+                    <a href="">Content</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="">Home</a>
+                    <a href="">Analytics</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="">Home</a>
+                    <a href="">Marketing</a>
                 </li>
             </ul>
         </nav>
