--- a/dashboard.html
+++ b/dashboard.html
@@ -45,6 +45,11 @@
                     <a href="">Marketing</a>
                 </li>
             </ul>
+            <ul>
+                <li>
+                    <a href="">Discounts</a>
+                </li>
+            </ul>
         </nav>
         <main class="app_content">
 
