--- a/dashboard.html
+++ b/dashboard.html
@@ -12,41 +12,65 @@
             <span><a href="">Kiddo</a></span>
             <ul>
                 <li>
+                    <span class="material-symbols-outlined">
+                        home
+                        </span>
                     <a href="">Home</a>
                 </li>
             </ul>
             <ul>
                 <li>
+                    <span class="material-symbols-outlined">
+                        shopping_basket
+                        </span>
                     <a href="">Orders</a>
                 </li>
             </ul>
             <ul>
                 <li>
+                    <span class="material-symbols-outlined">
+                        sell
+                        </span>
                     <a href="">Products</a>
                 </li>
             </ul>
             <ul>
                 <li>
+                    <span class="material-symbols-outlined">
+                        person
+                        </span>
                     <a href="">Customer</a>
                 </li>
             </ul>
             <ul>
                 <li>
+                    <span class="material-symbols-outlined">
+                        markdown_copy
+                        </span>
                     <a href="">Content</a>
                 </li>
             </ul>
             <ul>
                 <li>
+                    <span class="material-symbols-outlined">
+                        stacked_bar_chart
+                        </span>
                     <a href="">Analytics</a>
                 </li>
             </ul>
             <ul>
                 <li>
+                    <span class="material-symbols-outlined">
+                        drag_click
+                        </span>
                     <a href="">Marketing</a>
                 </li>
             </ul>
             <ul>
                 <li>
+                    <span class="material-symbols-outlined">
+                        settings
+                        </span>
                     <a href="">Discounts</a>
                 </li>
             </ul>
