--- a/dashboard.html
+++ b/dashboard.html
@@ -60,10 +60,10 @@
             </ul>
             <ul>
                 <li>
-                    <span class="material-symbols-outlined">
-                        drag_click
-                        </span>
-                    <a href="">Marketing</a>
+                    <a href="">
+                    <span class="material-symbols-outlined">drag_click</span>
+                    <span>Marketing</span>
+                </a>
                 </li>
             </ul>
             <ul>
