--- a/dashboard.html
+++ b/dashboard.html
@@ -1,84 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dashboard.css">
     <title>Dashboard</title>
 </head>
+
 <body>
     <div class="app_container">
         <nav class="navbar">
             <span><a href="">Kiddo</a></span>
             <ul>
                 <li>
-                    <span class="material-symbols-outlined">
-                        home
-                        </span>
-                    <a href="">Home</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <span class="material-symbols-outlined">
-                        shopping_basket
-                        </span>
-                    <a href="">Orders</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <span class="material-symbols-outlined">
-                        sell
-                        </span>
-                    <a href="">Products</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <span class="material-symbols-outlined">
-                        person
-                        </span>
-                    <a href="">Customer</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <span class="material-symbols-outlined">
-                        markdown_copy
-                        </span>
-                    <a href="">Content</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <span class="material-symbols-outlined">
-                        stacked_bar_chart
-                        </span>
-                    <a href="">Analytics</a>
+                    <a href="">
+                        <span class="material-symbols-outlined">home</span>
+                        <span>Home</span>
+                    </a>
                 </li>
             </ul>
             <ul>
                 <li>
                     <a href="">
-                    <span class="material-symbols-outlined">drag_click</span>
-                    <span>Marketing</span>
-                </a>
+                        <span class="material-symbols-outlined">shopping_basket</span>
+                        <span>Orders</span>
+                    </a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <span class="material-symbols-outlined">
-                        settings
-                        </span>
-                    <a href="">Discounts</a>
+                    <a href="">
+                        <span class="material-symbols-outlined">sell</span>
+                        <span>Products</span>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">
+                        <span class="material-symbols-outlined">person</span>
+                        <span>Customer</span>
+
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">
+                        <span class="material-symbols-outlined">markdown_copy</span>
+                        <span>Content</span>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">
+                        <span class="material-symbols-outlined">stacked_bar_chart</span>
+                        <span>Analytics</span>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">
+                        <span class="material-symbols-outlined">drag_click</span>
+                        <span>Marketing</span>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">
+                        <span class="material-symbols-outlined">settings</span>
+                        <span>Discounts</span>
+                    </a>
                 </li>
             </ul>
         </nav>
         <main class="app_content">
 
         </main>
-    </div> 
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
