--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,9 @@
 <body>
     <div class="app_container">
         <nav class="navbar">
-            <span><a href="">Kiddo</a></span>
+            <div class="logo_container">
+                <a href="">Kiddo</a>
+            </div>
             <ul>
                 <li>
                     <a href="">
