--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
             </div>
             <ul>
                 <li>
-                    <a href="">
+                    <a href="index.html">
                         <span class="material-symbols-outlined">home</span>
                         <span>Home</span>
                     </a>
@@ -32,9 +32,9 @@
             </ul>
             <ul>
                 <li>
-                    <a href="">
+                    <a href="Postad.html">
                         <span class="material-symbols-outlined">sell</span>
-                        <span>Products</span>
+                        <span>Sell Products</span>
                     </a>
                 </li>
             </ul>
