--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="nav-top">
             <div class="left">
                 <ul>
-                    <li><a href="Postad.html">Sell on Kiddos</a></li>
-                    <li><a href="">Store Locator</a></li>
+                    <li><a href="dashboard.html">My Dashboard</a></li>
+                    <li><a href="Postad.html">Sell on Kiddos</a></li>   
                 </ul>
             </div>
             <div class="right">
