--- a/dashboard.html
+++ b/dashboard.html
@@ -81,7 +81,7 @@
             </ul>
         </nav>
         <main class="app_content">
-
+<h2>body</h2>
         </main>
     </div>
     <script src="script.js"></script>
