--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
     <div class="dashboard_title">
         <h3>Amazing Deals Online</h3>
     </div>
-    <!-- <div class="dashboard">
+    <div class="dashboard">
         <div id="card">
 
         </div>
 
-    </div> -->
+    </div>
     <script src="script.js"></script>
 </body>
 
