--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
         <h3>Amazing Deals Online</h3>
     </div>
     <div class="dashboard">
+        <div class="card_container">
         <div id="card">
 
         </div>
-
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
