--- a/Postad.html
+++ b/Postad.html
@@ -12,6 +12,24 @@
 </head>
 
 <body>
+    <div class="topContainer">
+        <div class="nav-top">
+            <div class="left">
+                <ul>
+                    <li><a href="dashboard.html">My Dashboard</a></li>
+                    <li><a href="index.html">Home</a></li>
+                </ul>
+            </div>
+            <div class="right">
+                <ul>
+                    <li><a href="">Kiddo</a></li>
+                    <li><a href="">Pay</a></li>
+                    <li><a href="">Logistics</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
     <div class="nav-container borderline">
         <nav>
             <div class="logo">
@@ -38,9 +56,9 @@
             </div>
         </nav>
     </div>
-    
+
     <div class="body_wrapper">
-        <img class="img_cartoon" src="img/m8po_w1u0_210819-removebg-preview.png"  alt="">
+        <img class="img_cartoon" src="img/m8po_w1u0_210819-removebg-preview.png" alt="">
         <div class="body_container">
             <div class="form-heading">
                 <p class="clear">Edit</p>
@@ -66,8 +84,10 @@
                             <option value="Toys">Toys</option>
                         </select>
                     </div>
-                    <input type="text" name="productname" id="productname" class="form-control" placeholder="Product Name">
-                    <input type="number" name="price" id="productprice" class="form-control" placeholder="Product Price">
+                    <input type="text" name="productname" id="productname" class="form-control"
+                        placeholder="Product Name">
+                    <input type="number" name="price" id="productprice" class="form-control"
+                        placeholder="Product Price">
                     <input type="text" name="vendorname" id="vendorname" class="form-control" placeholder="Vendor Name">
                     <div class="addphoto">
                         <p>Add photo</p>
@@ -85,10 +105,10 @@
                 </div>
             </form>
         </div>
-        <img class="img_cartoon2" src="img/m8po_w1u0_210819-removebg-preview.png"  alt="">
+        <img class="img_cartoon2" src="img/m8po_w1u0_210819-removebg-preview.png" alt="">
     </div>
-   
-    
+
+
     <script src="script.js"></script>
 </body>
 
