--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li><a href="">Logistics</a></li>
                 </ul>
             </div>
+            <div class="first_hamburger "><i class="fa-solid fa-bars"></i></div>
         </div>
     </div>
     <div class="nav-container">
