--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
     <div class="nav-container">
     <nav>
+        <div class="next_hamburger "><i class="fa-solid fa-bars"></i></div>
         <div class="logo">
             Kiddo
         </div>
