--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <div class="topContainer">
         <div class="nav-top">
+            <input type="search" name="search" class="search top_search" id="" placeholder="Search products, brands and categories">
+            <button>Search</button>
             <div class="left">
                 <ul>
                     <li><a href="dashboard.html">My Dashboard</a></li>
