--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="topContainer">
         <div class="nav-top">
-            <input type="search" name="search" class="search top_search" id="" placeholder="Search products, brands and categories">
+            <input type="search" name="search" class=" top_search" id="" placeholder="Search products, brands and categories">
             <button>Search</button>
             <div class="left">
                 <ul>
