--- a/login.html
+++ b/login.html
@@ -17,8 +17,10 @@
                 Kiddo
             </div>
             <div class="nav-left">
+                <div>
                 <input type="search" name="search" class="search" id="" placeholder="Search products, brands and categories">
                 <button>Search</button>
+            </div>
                 <div class="sub-nav">
                     <i class="fa-regular fa-user"></i>&nbsp
                     <a href="login.html">Account</a>&nbsp
