--- a/login.html
+++ b/login.html
@@ -42,14 +42,14 @@
 <div class="body_wrapper">
     <div class="form_wrapper">
         <div class="form_container">
-            <form action="">
+            <form action="" id="user_form">
                 
                 <div class="welcome">
                     <i class="fa-regular fa-user"></i>
                     <p>Welcome to <span>Kiddo</span></p>
                 </div>
-                <input type="text" name="" id="" class="form-control" placeholder="Enter Username"><br>
-                <input type="text" name="" id="" class="form-control" placeholder="Enter Password">
+                <input type="text" name="" id="username" class="form-control" placeholder="Enter Username"><span id="username_error" class="error"></span><br>
+                <input type="text" name="" id="password" class="form-control" placeholder="Enter Password"><span id="password_error" class="error"></span>
                 <div class="showPass">
                     <div class="left">
                     <input type="checkbox" name="" id="">&nbsp;
