--- a/Postad.html
+++ b/Postad.html
@@ -59,14 +59,14 @@
 
     <div class="body_wrapper">
         <img class="img_cartoon" src="img/m8po_w1u0_210819-removebg-preview.png" alt="">
-        <div class="body_container">
+         <div class="body_container">
             <div class="form-heading">
                 <p class="clear">Edit</p>
                 <p>Post Ad</p>
                 <p class="clear">Clear</p>
-            </div>
+            </div> 
 
-            <form action="" class="form_body" id="form" enctype="multipart/form-data">
+            <form action="" class="form_body" id="form" >
                 <div class="form_wrapper">
 
                     <div class="">
@@ -98,7 +98,7 @@
                         </p>
                     </div>
                     <div>
-                        <input type="file" class="file" id="img">
+                        <input type="text" class="form-control" id="imgUrl">
                     </div>
                     <p class="formats">Supported formats are .jpg, .gif and .png, 5MB max</p>
                     <button class="form-control form_submit" id="submit">Submit</button>
