--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
 
         </div>
     </div>
+    <div id="myDashboard"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
