--- a/Postad.html
+++ b/Postad.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="body_wrapper">
-        <img class="img_cartoon" src="img/m8po_w1u0_210819-removebg-preview.png" alt="">
+        <img class="img_cartoon" src="img/super.png" alt="">
         <div class="body_container">
             <div class="form-heading">
                 <p class="clear">Edit</p>
@@ -104,7 +104,7 @@
                 </div>
             </form>
         </div>
-        <img class="img_cartoon2" src="img/m8po_w1u0_210819-removebg-preview.png" alt="">
+        <img class="img_cartoon2" src="img/super.png" alt="">
     </div>
 
 
