--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
     <div class="dashboard_title">
         <h3>Amazing Deals Online</h3>
     </div>
-    <div class="dashboard">
+    <!-- <div class="dashboard">
         <div class="card_container">
         <div id="card">
 
         </div>
+    </div> -->
+    <div id="myDashboard">
+        
     </div>
-    <div id="myDashboard"></div>
     </div>
     <script src="scripts.js"></script>
 </body>
