--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="right">
                 <ul>
-                    <li><a href="">Kiddo</a></li>
+                    <li><a href="login.html">Sign in</a></li>
                     <li><a href="">Pay</a></li>
                     <li><a href="">Logistics</a></li>
                 </ul>
@@ -40,9 +40,7 @@
             <input type="search" name="search" class="search" id="" placeholder="Search products, brands and categories">
             <button>Search</button>
             <div class="sub-nav">
-                <i class="fa-regular fa-user"></i>&nbsp
-                <a href="login.html">Account</a>&nbsp
-                <i class="fa-solid fa-angle-down"></i>
+                <a href="#">Home</a>
             </div>
             <div class="sub-nav">
                 <i class="fa-solid fa-question"></i>&nbsp
