--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                 <a href="#">Home</a>
             </div>
             <div class="sub-nav">
-                <i class="fa-solid fa-question"></i>&nbsp
-                <span>Help</span>&nbsp
-                <i class="fa-solid fa-angle-down"></i>
+                <span>Products</span>
             </div>
             <div class="sub-nav">
                 <i class="fa-solid fa-cart-shopping"></i>&nbsp
