--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
                 <span>Products</span>
             </div>
             <div class="sub-nav">
+                <span>Support</span>
+            </div>
+            <div class="sub-nav">
                 <i class="fa-solid fa-cart-shopping"></i>&nbsp
                 <span>Cart</span>
             </div>
+            
         </div>
     </nav>
 </div>
