--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
 </div>
     <div class="nav-bottom">
         <a href="">All Categories &nbsp<i class="fa-solid fa-bars"></i></a>
-        <a href="">Fashion For Girls</a>
-        <a href="">Fashion For Boys</a>
-        <a href="">Baby Essentials</a>
-        <a href="">Maternity</a>
+        <a href="login.html">Sign in</a>
+        <a href="dashboard.html">My dashboard</a>
+        <a href="Postad.html">Sell on Kiddos</a>
+        <!-- <a href="">Maternity</a>
         <a href="">School Store</a>
         <a href="">Travel & saftey Gear</a>
         <a href="">Diapering & Daily Care</a>
         <a href="">Kids Beddings & Decor</a>
-        <a href="">Toys</a>
+        <a href="">Toys</a> -->
     </div>
     <div class="dashboard_title">
         <h3>Amazing Deals Online</h3>
