--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="topContainer">
+    <!-- <div class="topContainer">
         <div class="nav-top">
             <input type="search" name="search" class=" top_search" id="" placeholder="Search products, brands and categories">
             <button>Search</button>
@@ -29,7 +29,7 @@
             </div>
             <div class="first_hamburger "><i class="fa-solid fa-bars"></i></div>
         </div>
-    </div>
+    </div> -->
     <div class="nav-container">
     <nav>
         <div class="next_hamburger "><i class="fa-solid fa-bars"></i></div>
