--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <span>Products</span>
             </div>
             <div class="sub-nav">
-                <span>Support</span>
+                <a href="https://wa.me/message/G46N5SLTXOQJL1">Support</a>
             </div>
             <div class="sub-nav">
                 <i class="fa-solid fa-cart-shopping"></i>&nbsp
