--- a/Postad.html
+++ b/Postad.html
@@ -89,15 +89,16 @@
                     <input type="number" name="price" id="productprice" class="form-control"
                         placeholder="Product Price">
                     <input type="text" name="vendorname" id="vendorname" class="form-control" placeholder="Vendor Name">
-                    <div class="addphoto">
+                    <!-- <div class="addphoto">
                         <p>Add photo</p>
                         <h5>Add at least 1 photo for this category</h5>
                         <p>First picture - is the title picture. You can change the order of photos: just grab your
                             photos and
                             drag
                         </p>
-                    </div>
-                        <input type="text" class="form-control" id="imgUrl">
+                    </div> -->
+                    <input type="text" class="form-control" id="imgUrl" placeholder="Image url">
+                    <input type="number" class="form-control" id="discount" placeholder="Add discount">
 
                     <p class="formats">Supported formats are .jpg, .gif and .png, 5MB max</p>
                     <button class="form-control form_submit" id="submit">Submit</button>
