--- a/Postad.html
+++ b/Postad.html
@@ -12,26 +12,9 @@
 </head>
 
 <body>
-    <div class="topContainer">
-        <div class="nav-top">
-            <div class="left">
-                <ul>
-                    <li><a href="dashboard.html">My Dashboard</a></li>
-                    <li><a href="index.html">Home</a></li>
-                </ul>
-            </div>
-            <div class="right">
-                <ul>
-                    <li><a href="">Kiddo</a></li>
-                    <li><a href="">Pay</a></li>
-                    <li><a href="">Logistics</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    <div class="nav-container borderline">
+    <div class="nav-container">
         <nav>
+            <div class="next_hamburger "><i class="fa-solid fa-bars"></i></div>
             <div class="logo">
                 Kiddo
             </div>
@@ -40,22 +23,28 @@
                     placeholder="Search products, brands and categories">
                 <button>Search</button>
                 <div class="sub-nav">
-                    <i class="fa-regular fa-user"></i>&nbsp
-                    <a href="login.html">Account</a>&nbsp
-                    <i class="fa-solid fa-angle-down"></i>
+                    <a href="#">Home</a>
                 </div>
                 <div class="sub-nav">
-                    <i class="fa-solid fa-question"></i>&nbsp
-                    <span>Help</span>&nbsp
-                    <i class="fa-solid fa-angle-down"></i>
+                    <span>Products</span>
+                </div>
+                <div class="sub-nav">
+                    <a href="https://wa.me/message/G46N5SLTXOQJL1">Support</a>
                 </div>
                 <div class="sub-nav">
                     <i class="fa-solid fa-cart-shopping"></i>&nbsp
                     <span>Cart</span>
                 </div>
+
             </div>
         </nav>
     </div>
+    <div class="nav-bottom">
+        <a href="">All Categories &nbsp<i class="fa-solid fa-bars"></i></a>
+        <a href="login.html">Sign in</a>
+        <a href="dashboard.html">My dashboard</a>
+        <a href="Postad.html">Sell on Kiddos</a>
+        </div>
 
     <div class="body_wrapper">
         <img class="img_cartoon" src="img/super.png" alt="">
