--- a/login.html
+++ b/login.html
@@ -11,33 +11,39 @@
 
 <body>
 
-    <div class="nav-container borderline">
+    <div class="nav-container">
         <nav>
+            <div class="next_hamburger "><i class="fa-solid fa-bars"></i></div>
             <div class="logo">
                 Kiddo
             </div>
             <div class="nav-left">
-                <div>
-                <input type="search" name="search" class="search" id="" placeholder="Search products, brands and categories">
+                <input type="search" name="search" class="search" id=""
+                    placeholder="Search products, brands and categories">
                 <button>Search</button>
-            </div>
                 <div class="sub-nav">
-                    <i class="fa-regular fa-user"></i>&nbsp
-                    <a href="login.html">Account</a>&nbsp
-                    <i class="fa-solid fa-angle-down"></i>
+                    <a href="#">Home</a>
                 </div>
                 <div class="sub-nav">
-                    <i class="fa-solid fa-question"></i>&nbsp
-                    <span>Help</span>&nbsp
-                    <i class="fa-solid fa-angle-down"></i>
+                    <span>Products</span>
+                </div>
+                <div class="sub-nav">
+                    <a href="https://wa.me/message/G46N5SLTXOQJL1">Support</a>
                 </div>
                 <div class="sub-nav">
                     <i class="fa-solid fa-cart-shopping"></i>&nbsp
                     <span>Cart</span>
                 </div>
+
             </div>
         </nav>
     </div>
+    <div class="nav-bottom">
+        <a href="">All Categories &nbsp<i class="fa-solid fa-bars"></i></a>
+        <a href="login.html">Sign in</a>
+        <a href="dashboard.html">My dashboard</a>
+        <a href="Postad.html">Sell on Kiddos</a>
+        </div>
 
 <div class="body_wrapper">
     <div class="form_wrapper">
