--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                     placeholder="Search products, brands and categories">
                 <button>Search</button>
                 <div class="sub-nav">
-                    <a href="#">Home</a>
+                    <a href="index.html">Home</a>
                 </div>
                 <div class="sub-nav">
                     <span>Products</span>
