--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="dashboard.css">
 
@@ -74,13 +75,13 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active img-bg" data-bs-interval="10000">
-                <img src="img/flyerwhite.png" class="d-block w-100 img-style" alt="...">
+                <img src="img/banner1.jpg" class="d-block w-100 img-style" alt="...">
             </div>
             <div class="carousel-item img-bg" data-bs-interval="2000">
-                <img src="img/flyer2.png" class="d-block w-100 img-style" alt="...">
+                <img src="img/banner2.jpg" class="d-block w-100 img-style" alt="...">
             </div>
             <div class="carousel-item img-bg">
-                <img src="img/flyer3.png" class="d-block w-100 img-style" alt="...">
+                <img src="img/bflyer.png" class="d-block w-100 img-style" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -105,11 +106,20 @@
             </div>
 
         </div>
-        <!-- <div id="myDashboard">
+
+
+    </div>
+
+    <div class="discount-wrapper">
+        <img src="img/b2.jpg" alt="">
+    </div>
+    <!-- <div id="myDashboard">
         
     </div> -->
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 
