--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
     <div class="discount-wrapper">
         <img src="img/b2.jpg" alt="">
     </div>
+    <div class="dashboard_title">
+    <h3>New Arrivals</h3>
+</div>
     <!-- <div id="myDashboard">
         
     </div> -->
