--- a/index.html
+++ b/index.html
@@ -112,8 +112,13 @@
 
     <div class="discount-wrapper">
         <img src="img/b2.jpg" alt="">
+        <div class="img_content">
+            <h3>Up to <span>70% off</span> - All toys</h3>
+            <button>Explore More</button>
+
+        </div>
     </div>
-    <div class="dashboard_title">
+    <div class="text-center">
     <h3>New Arrivals</h3>
 </div>
     <!-- <div id="myDashboard">
