--- a/index.html
+++ b/index.html
@@ -119,11 +119,20 @@
         </div>
     </div>
     <div class="text-center">
-    <h3>New Arrivals</h3>
-</div>
-    <!-- <div id="myDashboard">
-        
-    </div> -->
+        <h3>New Arrivals</h3>
+    </div>
+    <div class="newarrival_dashboard">
+        <div class="card_container">
+            <div id="card">
+
+            </div>
+
+        </div>
+
+
+    </div>
+
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
