--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="sub-nav">
                     <i class="fa-solid fa-cart-shopping"></i>&nbsp
-                    <span>Cart</span>
+                    <span><a href="cart.html">Cart</a></span>
                 </div>
 
             </div>
