--- a/cart.html
+++ b/cart.html
@@ -45,7 +45,11 @@
         <a href="dashboard.html">My dashboard</a>
         <a href="Postad.html">Sell on Kiddos</a>
     </div>
-    
+
+    <div id="mycart">
+
+    </div>
+
     <script src="script.js"></script>
 </body>
 
