--- a/cart.html
+++ b/cart.html
@@ -46,9 +46,9 @@
         <a href="Postad.html">Sell on Kiddos</a>
     </div>
 
-    <div id="mycart">
+    <ul id="mycart">
 
-    </div>
+    </ul>
 
     <script src="script.js"></script>
 </body>
