--- a/Postad.html
+++ b/Postad.html
@@ -71,6 +71,9 @@
                             <option value="Diapering & Daily Care">Diapering & Daily Care</option>
                             <option value="Kids Beddings & Decor">Kids Beddings & Decor</option>
                             <option value="Toys">Toys</option>
+                            <option value="new arivals">New Arrivals</option>
+                            <option value="amazing deals online">Amazing Deals Online</option>
+
                         </select>
                     </div>
                     <input type="text" name="productname" id="productname" class="form-control"
