--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
     <div class="text-center">
         <h3>New Arrivals</h3>
     </div>
-    <div class="newarrival_dashboard">
+    <div class="dashboard">
         <div class="card_container">
-            <div id="card">
+            <div id="newcard">
 
             </div>
 
@@ -132,6 +132,29 @@
 
     </div>
 
+    <div class="bonus">
+        <div>
+            <div class="bonus_heading color1">
+                <h6>Buy 1 get 1 free</h6>
+                <p>The best classic baby wear is on Kiddo</p>
+                <button>Learn More</button>
+            </div>
+            <img src="img/cloths.jpg">
+        </div>
+        <div>
+            <div class="bonus_heading color2">
+                <h6>Upcoming Season</h6>
+                <p>The best classic baby hood is on Kiddo</p>
+                <button>Collection</button>
+            </div>
+            <img src="img/Hoodies.jpg" alt="">
+        </div>
+        <div>
+            <div>
+                <h5>Sign Up For NewsLetters</h5>
+                
+            </div>
+        </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
