--- a/index.html
+++ b/index.html
@@ -149,13 +149,18 @@
             </div>
             <img src="img/Hoodies.jpg" alt="">
         </div>
-        <div>
-            <div>
-                <h5>Sign Up For NewsLetters</h5>
-                
-            </div>
-        </div>
+       
 
+    </div>
+    <div class="Signup">
+        <div>
+            <h5>Sign Up For NewsLetters</h5>
+            <p>Get Email updtes about our latest shop and special offers.</p>
+        </div>
+        <div>
+            <input type="text" name="" id="" placeholder="Your email address">
+            <button>SignUp</button>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
