--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="bonus_heading color1">
                 <h6>Buy 1 get 1 free</h6>
                 <p>The best classic baby wear is on Kiddo</p>
-                <button>Learn More</button>
+                <button class="bonus-btn">Learn More</button>
             </div>
             <img src="img/cloths.jpg">
         </div>
@@ -145,7 +145,7 @@
             <div class="bonus_heading color2">
                 <h6>Upcoming Season</h6>
                 <p>The best classic baby hood is on Kiddo</p>
-                <button>Collection</button>
+                <button class="bonus-btn">Collection</button>
             </div>
             <img src="img/Hoodies.jpg" alt="">
         </div>
@@ -158,9 +158,12 @@
             <p>Get Email updtes about our latest shop and special offers.</p>
         </div>
         <div>
-            <input type="text" name="" id="" placeholder="Your email address">
-            <button>SignUp</button>
+            <input type="text" class="signup-input" id="" placeholder="Your email address">
+            <button class="bonus-btn">SignUp</button>
         </div>
+    </div>
+    <div class="Footer">
+        
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
