--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="dashboard.css">
 
     <title>Kiddo</title>
@@ -163,7 +164,40 @@
         </div>
     </div>
     <div class="Footer">
-        
+        <div>
+            <h4>Kiddo</h4>
+            <p>Address: 56 Wellington Road, Abuja Nigeria</p>
+            <p>Phone: +234 8033790185</p>
+            <p>Hours: 10:00-18:00, Mon-Sat</p> <br>
+            <h6>Follow Us</h6>
+            <p><i class="fa-brands fa-facebook-f"></i><i class="fa-brands fa-youtube"></i><i class="fa-brands fa-instagram"></i><i class="fa-brands fa-twitter"></i></p>
+
+        </div>
+        <div>
+            <h4>About</h4>
+            <p>Delivery Information</p>
+            <p>Privacy Policy</p>
+            <p>Terms & Conditions</p>
+            <p>Contact Us</p>
+            <p>Help</p>
+        </div>
+        <div>
+            <h4>My Account</h4>
+            <p>Sign In</p>
+            <p>View Cart</p>
+            <p>My Wishlist</p>
+            <p>Track My Order</p>
+            <p>Sell on Kiddo</p>
+            
+        </div>
+        <div>
+            <h4>Install App</h4>
+            <p>From App Store or Google Play</p>
+            <img src="img/app.jpg" alt=""><img src="img/play.jpg" alt="">
+            <p>Secured Payment Gateways</p>
+            <img src="img/pay.png" alt="">
+            <p>More Info</p>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
